@@ -6,6 +6,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Added
+
+- Method AbstractHttpData->getData()
+
 ## 0.0.3
 
 ### Removed
